--- a/Note/JavaScript/HTMLCSSWebIntro/WCBCafe/css/style.css
+++ b/Note/JavaScript/HTMLCSSWebIntro/WCBCafe/css/style.css
@@ -59,6 +59,11 @@ img {
     scale: 1.2;
 }
 
+/* iframe */
+iframe {
+    width: 100%;
+}
+
 /* ヘッダー ------------------------------ */
 .page-header {
     padding-top: .5rem;
@@ -188,6 +193,48 @@ img {
     font-size: .875rem;
 }
 
+/* CONTACT ------------------------------ */
+.cover-contact {
+    background-image: url(../images/cover-contact-s.webp);
+}
+
+/* 店舗情報 */
+.location {
+    margin-bottom: 3.5rem;
+}
+.location-info {
+    margin-bottom: 2rem;
+}
+.location-info .info {
+    padding: 0;
+}
+
+/* お問い合わせ */
+.email {
+    max-width: 916px;
+    background-color: #faf7f0;
+    border-radius: 48px;
+    padding: 1.5rem 2.5rem 2.5rem;
+    margin: 0 auto 2rem;
+}
+.email p {
+    margin: 1rem 0 2rem;
+}
+
+/* SNS */
+.sns-item {
+    margin-bottom: 2rem;
+}
+.sns-item .heading-medium {
+    margin-bottom: .5rem;
+}
+.sns-youtube {
+    aspect-ratio: 16/9;
+}
+.sns-youtube iframe {
+    height: 100%;
+}
+
 /* フッター ------------------------------ */
 .page-footer {
     background-image: url(../images/footer-s.webp);
@@ -294,6 +341,36 @@ img {
     }
     .item p {
         font-size: 1rem;
+    }
+
+    /* CONTACT */
+    .cover-contact {
+        background-image: url(../images/cover-contact-l.webp);
+    }
+    .location {
+        display: flex;
+        gap: 2rem;
+    }
+    .location-info {
+        width: 32%;
+    }
+    .location-info .info th {
+        padding-left: 2rem;
+    }
+    .location-map {
+        width: 64%;
+    }
+    .email {
+        margin-bottom: 4rem;
+    }
+    .sns {
+        display: flex;
+        align-items: flex-start;
+        gap: 2rem;
+        margin-bottom: 0;
+    }
+    .sns-item {
+        flex: 1;
     }
 
     /* フッター */
